--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carnaluna Link.tree</title>
-</head>
-<body>
-    <h2>Some header here.</h2>
-</body>
+  </head>
+  <body>
+    <h2>Welcome to my Link.tree</h2>
+  </body>
 </html>
