--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
     <h2>Follow Me On</h2>
 
     <div class="channels">
-      <a href="#">Blog</a>
-      <a href="#">Youtube</a>
-      <a href="#">Twitch</a>
+      <a href="https://github.com/carnaluna" target="_blank">Github</a>
+      <a
+        href="https://www.upwork.com/freelancers/~019e02afa7da01490c"
+        target="_blank"
+        >Upwork</a
+      >
+      <a href="#">Website</a>
     </div>
   </body>
 </html>
