--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Featured Link -->
     <h2>Featured</h2>
-    <a href="#" class="featured">Featured Link 1</a>
+    <a href="#" class="featured">My Website</a>
 
     <!-- Popular Content -->
     <h2>Popular Content</h2>
@@ -36,7 +36,7 @@
         target="_blank"
         >Upwork</a
       >
-      <a href="#">Website</a>
+      <a href="#">Youtube</a>
     </div>
   </body>
 </html>
