--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
     />
-    <link rel="stylesheet" href="/links/app/scss/style.css" />
+    <link rel="stylesheet" href="/app/scss/style.css" />
   </head>
 
   <body>
     <!-- Logo -->
-    <!-- <img src="" alt="" class="logo"> -->
-    <h2>-- Add a Logo Here --</h2>
+    <!-- <h2>-- Add a Logo Here --</h2> -->
+    <div class="header">
+      <img
+        class="header__img"
+        src="/links/img/profile.png"
+        alt="profile-image"
+      />
+      <p>@casseopeian</p>
+    </div>
 
     <!-- Featured Link -->
     <h2>Featured</h2>
