--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     <!-- Logo -->
     <!-- <h2>-- Add a Logo Here --</h2> -->
     <div class="header">
-      <img
-        class="header__img"
-        src="/links/img/profile.png"
-        alt="profile-image"
-      />
+      <img class="header__img" src="/img/profile.png" alt="profile-image" />
       <p>@casseopeian</p>
     </div>
 
