--- a/index.html
+++ b/index.html
@@ -19,27 +19,46 @@
       <p>@casseopeian</p>
     </div>
 
+    <div class="social">
+      <a class="social__icon"
+        href="https://www.linkedin.com/in/gabriela-t-a9bb12185/"
+        target="_blank"
+        ><img src="/img/SVGs/LinkedIn.svg" alt="LinkedIn"
+      /></a>
+      <a class="social__icon" href="https://www.instagram.com/casseopeian/" target="_blank"
+        ><img src="/img/SVGs/Instagram.svg" alt="Instagram"
+      /></a>
+      <a class="social__icon" href="https://www.facebook.com/gabriela.taylor.904750/" target="_blank"
+        ><img src="/img/SVGs/Facebook.svg" alt="Facebook"
+      /></a>
+      <a class="social__icon" href="https://github.com/carnaluna" target="_blank"></a>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          fill="#FFFFFF"
+          viewBox="0 0 24 24"
+        >
+          <path
+            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+          /></svg
+      ></a>
+    </div>
+
     <!-- Featured Link -->
     <h2>Featured</h2>
     <a href="#" class="featured">My Website</a>
 
     <!-- Popular Content -->
-    <h2>Popular Content</h2>
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-
-    <!-- Channels -->
-    <h2>Follow Me On</h2>
-
-    <div class="channels">
-      <a href="https://github.com/carnaluna" target="_blank">Github</a>
+    <div class="content">
+      <h2>Popular Content</h2>
       <a
         href="https://www.upwork.com/freelancers/~019e02afa7da01490c"
         target="_blank"
         >Upwork</a
       >
-      <a href="#">Youtube</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
     </div>
   </body>
 </html>
