Updating index.html

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
     <!-- Popular Content -->
     <div class="content">
-      <h2>Popular Content</h2>
+      <h2>Freelance Content</h2>
       <a
         href="https://www.upwork.com/freelancers/~019e02afa7da01490c"
         target="_blank"
         >Upwork</a
       >
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Certifications</a>
     </div>
   </body>
 </html>
