Updating link text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Featured Link -->
     <h2>Featured</h2>
-    <a href="#" class="featured">My Website</a>
+    <a href="#" class="featured">My Personal Site</a>
 
     <!-- Popular Content -->
     <div class="content">
