--- a/index.html
+++ b/index.html
@@ -20,18 +20,29 @@
     </div>
 
     <div class="social">
-      <a class="social__icon"
+      <a
+        class="social__icon"
         href="https://www.linkedin.com/in/gabriela-t-a9bb12185/"
         target="_blank"
         ><img src="/img/SVGs/LinkedIn.svg" alt="LinkedIn"
       /></a>
-      <a class="social__icon" href="https://www.instagram.com/casseopeian/" target="_blank"
+      <a
+        class="social__icon"
+        href="https://www.instagram.com/casseopeian/"
+        target="_blank"
         ><img src="/img/SVGs/Instagram.svg" alt="Instagram"
       /></a>
-      <a class="social__icon" href="https://www.facebook.com/gabriela.taylor.904750/" target="_blank"
+      <a
+        class="social__icon"
+        href="https://www.facebook.com/gabriela.taylor.904750/"
+        target="_blank"
         ><img src="/img/SVGs/Facebook.svg" alt="Facebook"
       /></a>
-      <a class="social__icon" href="https://github.com/carnaluna" target="_blank"></a>
+      <a
+        class="social__icon"
+        href="https://github.com/carnaluna"
+        target="_blank"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
