--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         target="_blank"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
+          width="23"
+          height="23"
           fill="#FFFFFF"
           viewBox="0 0 24 24"
         >
@@ -99,6 +99,7 @@
       >
       <a href="#">Portfolio</a>
       <a href="#">Certifications</a>
+      <a href="mailto:gbmytabc@yahoo.com">Contact</a>
     </div>
   </body>
 </html>
