Added new links, updated email text in header

--- a/links/links.html
+++ b/links/links.html
@@ -20,7 +20,10 @@
         src="/links/img/profile.png"
         alt="profile-image"
       />
-      <p>@casseopeian</p>
+      <p>
+        @casseopeian<br />Inquiries
+        <span class="arrow">➻</span> gbmytabc@yahoo.com
+      </p>
     </div>
 
     <div class="social">
@@ -91,19 +94,25 @@
 
     <!-- Featured Link -->
     <h2>Featured</h2>
-    <a href="#" class="featured">My Website</a>
+    <a href="https://carnaluna.github.io/" class="featured">
+      <span class="arrow">⇒</span>
+      <span class="featured__text">Personal Site</span>
+      <span class="arrow">⇐</span>
+    </a>
 
     <!-- Popular Content -->
     <div class="content">
       <h2>Freelance Content</h2>
-      <a
+      <!-- <a
         href="https://www.upwork.com/freelancers/~019e02afa7da01490c"
         target="_blank"
         >Upwork</a
-      >
+      > -->
       <a href="#">Portfolio</a>
       <a href="#">Certifications</a>
-      <a href="mailto:gbmytabc@yahoo.com">Contact</a>
+      <a href="#">Another Link Here</a>
+      <a href="#">Another Link Here</a>
+      <a href="mailto:gbmytabc@yahoo.com">Hire Me</a>
     </div>
   </body>
 </html>
