removed target blank for header image link

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
         <a class="header__text flex-child" href="https://carnaluna.github.io/"
           >Gabriela Taylor</a
         >
-        <a
-          class="flex-child"
-          href="https://carnaluna.github.io/"
-          target="_blank"
+        <a class="flex-child" href="https://carnaluna.github.io/"
           ><img
             class="header__img"
             src="./images/profile_photo.png"
