--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav__item" href="#">Portfolio</a>
             <a class="nav__item" href="./contactform.html">Contact</a>
 
-            <a class="nav__item" href="./links/links.html" target="_blank"
+            <a class="nav__item" href="./DB_links/links.html" target="_blank"
               >Links</a
             >
           </div>
