--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
     />
-    <link rel="stylesheet" href="/links/app/scss/style.css" />
+    <link rel="stylesheet" href="\DB_links\links\app\scss\style.css" />
   </head>
 
   <body>
@@ -17,7 +17,7 @@
     <div class="header">
       <img
         class="header__img"
-        src="/links/img/profile.jpg"
+        src="\DB_links\links\img\Profile.jpg"
         alt="profile-image"
       />
       <p>
@@ -43,7 +43,7 @@
         class="social__icon"
         href="https://www.facebook.com/gabriela.taylor.904750/"
         target="_blank"
-        ><img src="/links/img/SVGs/Discord.svg" alt="Discord"
+        ><img src="/DB_links/links/img/SVGs/Discord.svg" alt="Discord"
       /></a>
       <a
       class="social__icon"
@@ -84,8 +84,14 @@
     
     <div class="content">
       <h2>☞ Keyboards ☜</h2>
-      <a href="https://ergodox-ez.com/pages/customize" target="_blank" class="featured">Daily Driver</a>
+      <a href="https://ergodox-ez.com/pages/customize" target="_blank" class="featured">
+        <span class="special__chars">⋆ ˚｡⋆୨୧˚  ⚚ </span>
+        - Daily Driver - 
+        <span class="special__chars">⚚  ˚୨୧⋆｡˚ ⋆</span></a>
       <br/>
+      <a href="https://mechwild.com/product/mercutio/" target="_blank">Mercutio 40%</a>
+      <a href="https://bit.ly/3zMEG6s" target="_blank">Microdox</a>
+      <a href="https://bit.ly/3ibRq0D" target="_blank">Rhymestone Split Ortho</a>
       <a href="https://bit.ly/2VgqaF2" target="_blank">AKKO 3084</a>
       <a href="https://bit.ly/3icb0d6" target="_blank">Gamakay K61</a>
       <a href="https://amzn.to/36Y1dRs" target="_blank">Portable Bluetooth w/ Trackpad (Out of Stock)</a>
@@ -93,9 +99,12 @@
     
     <div class="content">
       <h2>☞ Artisans ☜</h2>
-      <a href="#" target="_blank">Sushi Keycap</a>
-      <a href="#" target="_blank">Succulents</a>
-      <a href="#" target="_blank">Oni Keycap</a>
+      <a href="https://etsy.me/3xdfXX9" target="_blank">Sushi Artisan</a>
+      <a href="https://etsy.me/2Wr1UAy" target="_blank">Sakura Artisan</a>
+      <a href="https://etsy.me/3zME9Bu" target="_blank">Capsmith Cherry Blossoms</a>
+      <a href="https://etsy.me/3ieav2e" target="_blank">Capsmith Succulents</a>
+      <a href="https://etsy.me/2V1up7G" target="_blank">BreakWooden Oni Artisan</a>
+      <a href="https://etsy.me/3faNcnV" target="_blank">3D Star Artisans</a>
     </div>
   </body>
 </html>
