Updated home page bio and removed some links

--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -100,9 +100,9 @@
     <div class="content">
       <h2>☞ Artisans ☜</h2>
       <a href="https://etsy.me/3xdfXX9" target="_blank">Sushi Artisan</a>
-      <a href="https://etsy.me/2Wr1UAy" target="_blank">Sakura Artisan</a>
-      <a href="https://etsy.me/3zME9Bu" target="_blank">Capsmith Cherry Blossoms</a>
-      <a href="https://etsy.me/3ieav2e" target="_blank">Capsmith Succulents</a>
+      <a href="https://etsy.me/2Wr1UAy" target="_blank">Malaya Artisan Sakura Keycap</a>
+      <a href="https://etsy.me/3zME9Bu" target="_blank">Capsmiths Cherry Blossoms</a>
+      <a href="https://etsy.me/3ieav2e" target="_blank">Capsmiths Succulents</a>
       <a href="https://etsy.me/2V1up7G" target="_blank">BreakWooden Oni Artisan</a>
       <a href="https://etsy.me/3faNcnV" target="_blank">3D Star Artisans</a>
     </div>
