--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
           <div class="nav__links">
             <!-- Move these to the footer and replace with "Home", etc -->
             <a class="nav__item" href="#">About</a>
-            <a class="nav__item" href="#">Portfolio</a>
-            <a class="nav__item" href="./contactform.html">Contact</a>
+            <!-- <a class="nav__item" href="#">Portfolio</a> -->
+            <!-- <a class="nav__item" href="./contactform.html">Contact</a> -->
 
-            <a class="nav__item" href="./DB_links/links.html" target="_blank"
-              >Links</a
+            <a class="nav__item" href="./DB_links/links.html">Links</a
             >
           </div>
         </nav>
@@ -44,37 +43,23 @@
 
     <section class="welcome-section">
       <h3 class="intro">
-        Freelance data management specialist and front-end dev hobbyist. I build
-        interactive dashboards, and collect mechanical keyboards.
+        Freelance data management specialist and front-end dev hobbyist. 
+        <br/> I build interactive dashboards, and collect mechanical keyboards.
       </h3>
     </section>
 
     <section class="content-section">
       <div class="content-section__item">
-        <h2>Blog Post</h2>
+        <h2>A little about me</h2>
+        <hr class="line"/> 
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
-          enim ut? Illum sed nemo in vel, consequuntur earum iste repellendus
-          magni alias consectetur fuga accusantium, reiciendis natus dolore enim
-          tenetur? Placeat fugiat ipsa sed aliquam, laborum maxime nobis
-          recusandae tempora fuga voluptatem nostrum eligendi rerum repudiandae
-          odio, illum laboriosam a, natus vitae corrupti eius! Quibusdam rem
-          praesentium molestiae. Soluta, eligendi! Tenetur repudiandae eos iusto
-          cumque aperiam recusandae eius fugiat similique earum! Inventore
-          recusandae velit sapiente atque perspiciatis aspernatur dolorem
-          necessitatibus, repellendus eveniet hic commodi similique iste.
-          Explicabo repellat nisi nobis. Quaerat perspiciatis asperiores sint
-          nemo fuga laudantium vel veniam nesciunt ullam labore magni reiciendis
-          dicta necessitatibus, facilis nostrum mollitia deserunt ipsum
-          veritatis voluptates pariatur? Quaerat tempora ea mollitia dicta quae?
-          Mollitia similique obcaecati molestias quidem dolor sint quisquam ad
-          praesentium laboriosam, in iste inventore perspiciatis quam recusandae
-          voluptatibus nesciunt earum fugiat voluptatem. Sed nihil iusto nobis
-          cupiditate sequi fuga tempora.
+          I was raised in Florida and have spent most of my life here. During the day I work in Supply Chain, but my interests range from tinkering with spreadsheets, collecting and building mechanical keyboards, reading, and making art. I've been known to draw/paint for fun, but I hope to start making artisan keycaps this coming year.
         </p>
+        <p>Catch me on social media to stay up-to-date on keyboard builds, which I plan to stream on Twitch! </p>
+        <p>@dsa.bae on everything!</p>
       </div>
 
-      <div class="content-section__item">
+      <!-- <div class="content-section__item">
         <h2>Blog Post</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
@@ -95,7 +80,7 @@
           non, repudiandae suscipit, recusandae enim ea doloremque laborum
           accusamus? Deserunt quod similique nostrum consectetur.
         </p>
-      </div>
+      </div> -->
     </section>
 
     <footer class="footer">
@@ -150,7 +135,7 @@
         /></a>
         <a
           class="social__icon"
-          href="https://github.com/carnaluna"
+          href="https://github.com/dsa.bae"
           target="_blank"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
