--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <div class="content-section__item">
         <h2>A little about me</h2>
         <hr class="line"/> 
-        <p>
-          I was raised in Florida and have spent most of my life here. During the day I work in Supply Chain, but my interests range from tinkering with spreadsheets, collecting and building mechanical keyboards, reading, and making art. I've been known to draw/paint for fun, but I hope to start making artisan keycaps this coming year.
-        </p>
-        <p>Catch me on social media to stay up-to-date on keyboard builds, which I plan to stream on Twitch! </p>
-        <p>@dsa.bae on everything!</p>
+        <p>I was raised in Florida and have spent most of my life here.</p>
+        <p>During the day I work in Supply Chain, but I moonlight as a freelance dashboard designer, an amateur-ish programmer, mechanical keyboard enthusiast, and sometimes painter/sewer/general crafty person.</p>
+        <p>When I get bored of all that (rare) I spend time self-teaching Japanese, reading fantasy novels, playing Fallout 4, or trying my hand at artisan keycap design. I hope to invest in and experiment with materials in order to open my own shop sometime this coming year!</p>
+        <p>Catch me on social media to stay up-to-date on keyboard builds, which I'll be streaming on <a href="https://www.twitch.tv/dsabae" target="_blank" class="content-section__item__social"><strong>Twitch</strong></a></p>
+        <p><span class="handle">@dsa.bae</span> on everything!</p>
       </div>
 
       <!-- <div class="content-section__item">
