--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -41,6 +41,12 @@
       /></a>
       <a
         class="social__icon"
+        id="twitch"
+        href="https://www.twitch.tv/dsabae"
+        target="_blank"
+        ><svg fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="20px" height="20px"><path d="M 5.3125 1 L 5.0625 1.65625 L 2.0625 9.65625 L 2 9.8125 L 2 43 L 13 43 L 13 49 L 20.40625 49 L 20.71875 48.71875 L 26.4375 43 L 35.40625 43 L 35.71875 42.71875 L 48 30.4375 L 48 1 Z M 6.6875 3 L 46 3 L 46 29.59375 L 34.59375 41 L 25.59375 41 L 19.59375 47 L 15 47 L 15 41 L 4 41 L 4 10.1875 Z M 10 5 L 10 35 L 18 35 L 18 42.40625 L 19.71875 40.71875 L 25.4375 35 L 37.40625 35 L 37.71875 34.71875 L 43.71875 28.71875 L 44 28.40625 L 44 5 Z M 12 7 L 42 7 L 42 27.5625 L 36.5625 33 L 24.59375 33 L 24.28125 33.28125 L 20 37.5625 L 20 33 L 12 33 Z M 20 13 L 20 27 L 26 27 L 26 13 Z M 30 13 L 30 27 L 36 27 L 36 13 Z M 22 15 L 24 15 L 24 25 L 22 25 Z M 32 15 L 34 15 L 34 25 L 32 25 Z"/></svg></a>
+      <a
+        class="social__icon"
         href="https://www.facebook.com/gabriela.taylor.904750/"
         target="_blank"
         ><img src="/DB_links/links/img/SVGs/Discord.svg" alt="Discord"
@@ -63,7 +69,7 @@
     </div>
 
     <!-- Featured Link -->
-    <h2>Featured</h2>
+    <h2>Join Us on Discord!</h2>
     <a href="https://discord.gg/EdPDCnTTVW" target="_blank" class="featured">
       <span class="discord-left">
         <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 64 64" width="28px" height="28px"><linearGradient id="Vxv7gCPVEw~_aM1Kz46BMa" x1="32" x2="32" y1="10" y2="58" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#1a6dff"/><stop offset="1" stop-color="#c822ff"/></linearGradient><path fill="url(#Vxv7gCPVEw~_aM1Kz46BMa)" d="M53,58c-0.223,0-0.444-0.075-0.625-0.219l-7.477-5.981c0.057,0.277-0.006,0.566-0.176,0.795 C44.534,52.85,44.236,53,43.919,53H16.676C12.995,53,10,50.005,10,46.324V16.676C10,12.995,12.995,10,16.676,10h30.648 C51.005,10,54,12.995,54,16.676V57c0,0.384-0.221,0.735-0.566,0.901C53.296,57.967,53.147,58,53,58z M43,48 c0.222,0,0.442,0.074,0.625,0.219l8.375,6.7V16.676C52,14.098,49.902,12,47.324,12H16.676C14.098,12,12,14.098,12,16.676v29.648 C12,48.902,14.098,51,16.676,51h25.891l-0.522-1.707c-0.129-0.419,0.031-0.874,0.395-1.12C42.608,48.057,42.805,48,43,48z"/><linearGradient id="Vxv7gCPVEw~_aM1Kz46BMb" x1="32" x2="32" y1="41.512" y2="21.352" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#e6abff"/><stop offset="1" stop-color="#6dc7ff"/></linearGradient><path fill="url(#Vxv7gCPVEw~_aM1Kz46BMb)" d="M42.181,23.861c0,0-2.912-2.251-6.362-2.509l-0.302,0.616c3.114,0.75,4.536,1.837,6.026,3.17 c-2.565-1.31-5.107-2.666-9.542-2.666s-6.978,1.355-9.542,2.666c1.49-1.333,3.192-2.542,6.026-3.17l-0.302-0.616 c-3.618,0.347-6.362,2.509-6.362,2.509S18.56,28.554,18,37.727c3.293,3.763,8.277,3.786,8.277,3.786l1.03-1.378 c-1.758-0.605-3.763-1.691-5.488-3.662c2.061,1.546,5.163,2.8,10.181,2.8s8.12-1.254,10.181-2.8 c-1.725,1.971-3.73,3.058-5.488,3.662l1.03,1.378c0,0,4.984-0.022,8.277-3.786C45.44,28.554,42.181,23.861,42.181,23.861z M28.08,35.912c-1.232,0-2.24-1.254-2.24-2.8c0-1.546,1.008-2.8,2.24-2.8s2.24,1.254,2.24,2.8 C30.32,34.658,29.312,35.912,28.08,35.912z M35.92,35.912c-1.232,0-2.24-1.254-2.24-2.8c0-1.546,1.008-2.8,2.24-2.8 c1.232,0,2.24,1.254,2.24,2.8C38.16,34.658,37.152,35.912,35.92,35.912z"/></svg>
@@ -78,7 +84,7 @@
     <div class="content">
       <h2>☞ Links ☜</h2>
       <a href="https://www.twitch.tv/dsabae" target="_blank">Twitch</a>
-      <a href="#">Youtube -- <em>Coming Soon</em></a>
+      <!-- <a href="#">Youtube -- <em>Coming Soon</em></a> -->
       <a href="mailto:dsa.bae@yahoo.com">Contact</a>
     </div>
     
