--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -95,12 +95,16 @@
         - Daily Driver - 
         <span class="special__chars">⚚  ˚୨୧⋆｡˚ ⋆</span></a>
       <br/>
-      <a href="https://mechwild.com/product/mercutio/" target="_blank">Mercutio 40%</a>
-      <a href="https://bit.ly/3zMEG6s" target="_blank">Microdox</a>
-      <a href="https://bit.ly/3ibRq0D" target="_blank">Rhymestone Split Ortho</a>
       <a href="https://bit.ly/2VgqaF2" target="_blank">AKKO 3084</a>
       <a href="https://bit.ly/3icb0d6" target="_blank">Gamakay K61</a>
       <a href="https://amzn.to/36Y1dRs" target="_blank">Portable Bluetooth w/ Trackpad (Out of Stock)</a>
+    </div>
+    
+    <div class="content">
+      <h2>☞ Upcoming Builds ☜</h2>
+      <a href="https://mechwild.com/product/mercutio/" target="_blank">Mercutio 40%</a>
+      <a href="https://bit.ly/3zMEG6s" target="_blank">Microdox</a>
+      <a href="https://bit.ly/3ibRq0D" target="_blank">Rhymestone Split Ortho</a>
     </div>
     
     <div class="content">
