Changed Links to Social Links

--- a/DB_links/links.html
+++ b/DB_links/links.html
@@ -85,7 +85,7 @@
 
     <!-- Popular Content -->
     <div class="content">
-      <h2>☞ Links ☜</h2>
+      <h2>☞ Social Links ☜</h2>
       <!-- <a href="#">Shop</a>
       <a href="#">Website</a> -->
       <a href="https://www.instagram.com/dsa.bae/" target="_blank">Instagram</a>
