--- a/contactform.html
+++ b/contactform.html
@@ -13,17 +13,21 @@
   <body class="contactform">
     <a href="./index.html" class="home flex-child">Home</a>
     <form>
-      <h6 class="contact-header">Username</h6>
-      <input type="text" placeholder="Username" />
+      <h3 class="form-title">Build Service</h3>
+      <h6 class="contact-header">Full Name</h6>
+      <input type="text" placeholder="Full name" />
 
-      <!-- <h6 class="contact-header">Who are you?</h6>
-      <input type="radio" name="job" id="developer" />
-      <input type="radio" name="job" id="designer" /> -->
+      <h6 class="contact-header">Preferred Contact Method?</h6>
+      <input type="radio" name="contact-method" id="phone" />
+      <input type="radio" name="contact-method" id="email" />
 
-      <h6 class="contact-header">Email</h6>
+      <h6 class="contact-header">Email Address</h6>
       <input type="email" placeholder="youremail@email.com" />
-      <h6 class="contact-header">Message</h6>
-      <input type="textarea" placeholder="Type something" />
+      
+      <h6 class="contact-header">Keyboard</h6>
+      <input type="email" placeholder="Type of keyboard?" />
+      <h6 class="contact-header">Notes</h6>
+      <input type="textarea" placeholder="Any additional notes for me?" />
       <a href="#" class="submit">SUBMIT</a>
     </form>
   </body>
