Updated bio on main website landing page.

--- a/index.html
+++ b/index.html
@@ -51,36 +51,39 @@
     <section class="content-section">
       <div class="content-section__item">
         <h2>A little about me</h2>
-        <hr class="line"/> 
-        <p>I was raised in Florida and have spent most of my life here.</p>
+        <p>I was raised in Florida and have spent most of my life here, but was originally born in Poland -- Polish was actually my first language.</p>
         <p>During the day I work in Supply Chain, but I moonlight as a freelance dashboard designer, an amateur-ish programmer, mechanical keyboard enthusiast, and sometimes painter/sewer/general crafty person.</p>
-        <p>When I get bored of all that (rare) I spend time self-teaching Japanese, reading fantasy novels, playing Fallout 4, or trying my hand at artisan keycap design. I hope to invest in and experiment with materials in order to open my own shop sometime this coming year!</p>
-        <p>Catch me on social media to stay up-to-date on keyboard builds, which I'll be streaming on <a href="https://www.twitch.tv/dsabae" target="_blank" class="content-section__item__social"><strong>Twitch</strong></a></p>
-        <p><span class="handle">@dsa.bae</span> on everything!</p>
+        <p>When I get bored of all that (rare) I spend time self-teaching Japanese, reading fantasy novels, playing Fallout 4, or trying my hand at artisan keycap and keyset design. I hope to invest in and experiment with materials in order to open my own shop sometime this coming year!</p>
+        <p>Catch me on social media to stay up-to-date on keyboard builds, which I'll be streaming on <a href="https://www.twitch.tv/dsabae" target="_blank" class="content-section__item__social"><strong>Twitch</strong>.</a></p>
+        <p><a href="https://www.instagram.com/dsa.bae/" class="content-section__item__social">@dsa.bae</a> on Instagram</p>
+        <p><a href="https://twitter.com/dsa_bae" class="content-section__item__social">@dsa_bae</a> on Twitter</p>
+        <p><a href="https://www.twitch.tv/dsabae" class="content-section__item__social">@dsabae</a> on Twitch</p>
       </div>
 
-      <!-- <div class="content-section__item">
-        <h2>Blog Post</h2>
+      <div class="content-section__item">
+        <h2>Keyboards</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-          voluptate optio culpa. Provident corporis, tenetur dicta placeat saepe
-          voluptate nobis ex obcaecati! Aperiam sit odit culpa ducimus est
-          repudiandae tempora. Officia debitis quae dicta quam sapiente mollitia
-          at. Consectetur, illo facilis! Numquam provident doloremque tempore
-          culpa maxime impedit eius nesciunt eaque, dolores, animi, et in nam
-          quisquam fugit optio quaerat. Cupiditate id molestias nam eveniet
-          deserunt expedita velit culpa libero debitis excepturi illum ex sequi
-          accusamus pariatur animi, tempore neque deleniti saepe aliquid rerum
-          ducimus quam ratione! Repudiandae, ullam eius. Cumque exercitationem,
-          veritatis error blanditiis magnam excepturi. Beatae quod sint
-          voluptate tempora ut. Eveniet soluta porro perspiciatis doloremque quo
-          odit ab pariatur repudiandae adipisci, dolore repellat accusantium
-          numquam facilis quod. Quod sapiente beatae commodi ullam neque animi
-          laudantium dolorem iure aut dolorum, provident repellat odit ducimus
-          non, repudiandae suscipit, recusandae enim ea doloremque laborum
-          accusamus? Deserunt quod similique nostrum consectetur.
+          - Ergodox EZ (Current Daily Driver)
         </p>
-      </div> -->
+        <p>
+          - RGB Hot Swap Gamakay K61
+        </p>
+        <p>
+          - AKKO 8034 
+        </p>
+        <br>
+
+        <h3>Upcoming Builds</h3>
+        <p>          
+          - Mercutio 40% Through-Hole
+        </p>
+        <p> 
+          - Boardsource Microdox 30%
+        </p>
+        <p>          
+          - Boardsource Rhymestone Split Ortho
+        </p>
+      </div>
     </section>
 
     <footer class="footer">
