Added keyboard specs to home page

--- a/index.html
+++ b/index.html
@@ -61,28 +61,39 @@
       </div>
 
       <div class="content-section__item">
-        <h2>Keyboards</h2>
-        <p>
+        <h2>~ Keyboards ~</h2>
+        <p class="keyboard-specs">
           - Ergodox EZ (Current Daily Driver)
         </p>
-        <p>
+        <p class="keyboard-specs">
           - RGB Hot Swap Gamakay K61
         </p>
-        <p>
+        <p class="keyboard-specs">
           - AKKO 8034 
         </p>
         <br>
 
-        <h3>Upcoming Builds</h3>
-        <p>          
-          - Mercutio 40% Through-Hole
-        </p>
-        <p> 
-          - Boardsource Microdox 30%
-        </p>
-        <p>          
-          - Boardsource Rhymestone Split Ortho
-        </p>
+        <h3>~ Upcoming Builds ~</h3>
+        <h5 class="keyboard-builds">          
+          ✦ Mercutio 40% Through-Hole (Mechwild)
+        </h5>
+        <p class="keyboard-specs">FR4 Sandwhich Board with OLED display and rotary encoder</p>
+        <p class="keyboard-specs">Black case and PCB</p>
+
+        <h5 class="keyboard-builds"> 
+          ✦ Microdox 30% (Boardsource)
+        </h5>
+        <p class="keyboard-specs">Red FR4 Case and PCB with cute PCB art!</p>
+
+        <h5 class="keyboard-builds">          
+          ✦ Rhymestone 40-Key Split Ortho (Boardsource)
+        </h5>
+        <p class="keyboard-specs">Clear Acrylic Case, White FR4 PCB</p>
+
+        <h5 class="keyboard-builds">          
+          ✦ SMKeyboards Alice (Sandwhich, top half Wisteria, bottom half Non-Glare Clear)
+        </h5>
+
       </div>
     </section>
 
